// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanObsolete should remove obsolete messages from catalogs 1`] = `
Object {
  en: Object {
    Label: Object {
      translation: Label,
    },
  },
  fr: Object {
    Label: Object {
      translation: Label,
    },
  },
}
`;

exports[`collect should throw an error about different defaults 1`] = `
Encountered different defaults for message msg.id
diffDefaults/First.js:2 First default
diffDefaults/Second.js:5 Second default
`;

exports[`collect should traverse directory and collect messages 1`] = `
Object {
  Babel Documentation: Object {
    defaults: Babel Documentation,
    origin: Array [
      Array [
        src/components/Babel.js,
        5,
      ],
    ],
  },
  Label: Object {
    defaults: Label,
    origin: Array [
      Array [
        src/components/Babel.js,
        7,
      ],
      Array [
        src/components/Typescript.ts,
        7,
      ],
    ],
  },
  Typescript Documentation: Object {
    defaults: Typescript Documentation,
    origin: Array [
      Array [
        src/components/Typescript.ts,
        5,
      ],
    ],
  },
}
`;

exports[`collect should use defined default 1`] = `
Object {
  msg.id: Object {
    defaults: Second default,
    origin: Array [
      Array [
        onlyOneDefault/First.js,
        2,
      ],
      Array [
        onlyOneDefault/Second.js,
        5,
      ],
    ],
  },
}
`;

exports[`order should order messages alphabetically 1`] = `
Object {
  en: Object {
    LabelA: Object {
      translation: A,
    },
    LabelB: Object {
      translation: B,
    },
    LabelC: Object {
      translation: C,
    },
    LabelD: Object {
      translation: D,
    },
  },
  fr: Object {
    LabelA: Object {
      translation: A,
    },
    LabelB: Object {
      translation: B,
    },
    LabelC: Object {
      translation: C,
    },
    LabelD: Object {
      translation: D,
    },
  },
}
`;

exports[`order should order messages alphabetically 2`] = `
Object {
  en: Array [
    LabelA,
    LabelB,
    LabelC,
    LabelD,
  ],
  fr: Array [
    LabelA,
    LabelB,
    LabelC,
    LabelD,
  ],
}
`;

exports[`order should order messages by origin 1`] = `
Object {
  en: Object {
    LabelA: Object {
      origin: Array [
        Array [
          file2.js,
          3,
        ],
      ],
      translation: A,
    },
    LabelB: Object {
      origin: Array [
        Array [
          file1.js,
          2,
        ],
        Array [
          file2.js,
          2,
        ],
      ],
      translation: B,
    },
    LabelC: Object {
      origin: Array [
        Array [
          file1.js,
          1,
        ],
      ],
      translation: C,
    },
    LabelD: Object {
      origin: Array [
        Array [
          file2.js,
          100,
        ],
      ],
      translation: D,
    },
  },
}
`;

exports[`order should order messages by origin 2`] = `
Object {
  en: Array [
    LabelC,
    LabelB,
    LabelA,
    LabelD,
  ],
}
`;
